# scripts

./: .gitignore  CLAUDE.md  compute_recorded_change_masks.py  generate_pipeline_presentation.py  joint_state_merger.py  prepare_pipeline_split_datasets.py  pyproject.toml  ros1_robot_mask_saver_stl.py  run_masked_colmap_pose_compare.py  save_data_img_depth_mask_pose.py  save_dynaarm_camera1_rgb_tf.py  test_esam_from_change_mask.py  test_esam_timing.py  test_probreg_sam3d_refine.py  test_sam3d_single_object.py  view_sam3d_output.py
debug/: build_seed_pointcloud.py  capture_depth_points_init_cloud.py  compare_pose_conventions.py  inspect_sam3d_static_overlay.py  plot_nerfstudio_poses.py  plot_tf_vs_gazebo_camera_poses.py  plot_tf_vs_gazebo_trajectory.py  run_sam3d_size_sweep.py
dynamic_gs/: __init__.py  dynamic_gs_config.py  dynamic_gs_datamanager.py  dynamic_gs_model.py  dynamic_gs_pipeline.py  dynamic_gs_trainer.py
dynamic_gs/utils/: __init__.py  active_mask.py  cotracker_motion.py  depth_loss.py  esam.py  no_refine_strategy.py  rigid_regularization.py  sam2.py  sam3d.py  sam3d_fusion.py
fusion_experiments/: prepare_d0_bundle.py  run_fusion_bench.py
old/: convert_dae_to_stl.py  ns-export.broken_backup.txt  ros1_robot_mask_saver_stl.py  ros1_robot_mask_saver_stl_axis_sweep.py  ros1_robot_mask_saver_stl_tfdata.py  rosbag_to_nerfstudio.py  rosbag_to_nerfstudio_fk.py  save_camera_poses_and_images.py  save_dynaarm_camera1_rgb_gazebo.py  save_dynaarm_camera1_rgb_tf.py  save_dynaarm_camera1_rgb_tf_current.py  write_mask_style_poses.py
(+4 files in other folders)
